# autotune

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  chain.py  criteria.md  evaluate.py  llm.py  program.md  pyproject.toml  store.py  task.yaml
.claude/commands/: review.md  start.md
test_cases/: 01_sci_fi_colony_ship.json  02_literary_fiction_grief.json  03_dark_fantasy_revolution.json  04_thriller_whistleblower.json  05_magical_realism_migration.json
